--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Jwt": {
+  "JwtSettings": {
   "Key": "Eece437SuperSecretKeyThatIsLongEnough123!",
   "Issuer": "UniversityApp",
   "Audience": "UniversityApp"},
